# duplicates

./: .gitignore  CHANGELOG.md  README.md  __init__.py  codecov.yml  duplicates.code-workspace  pyproject.toml  requirements.txt
.github/workflows/: CI.yaml  publish.yaml
duplicates/: __init__.py  bufferediofile.py  cli.py  dupes.py
junit/: test-results.xml
test/: __init__.py  conftest.py  requirements.txt  testimports.py
test/data/dir3/: fileB2.txt
test/majorver/: __init__.py  conftest.py  fixtures.py  test_BufferedIOFile.py  test_File.py  test_cli.py  test_dupes_identification.py  test_dupes_linking.py  test_filecompare.py  test_filecomparison.py  test_filedetails.py  test_linking.py  test_logging.py  test_output.py  test_output_exceptions.py  testimports.py
test/majorver/data/dir2/: fileB.txt
test/minorver/: __init__.py  test_DuplicateFiles_internals.py  test_cli.py  test_filecomparison.py  test_filedetails.py  test_linking.py
